# ToyNeuralNetwork

./: pyproject.toml
app/: main.py
app/api/: main.py
app/api/routes/: health.py  neuro_net.py
app/frontend/: package.json
app/frontend/src/: App.css  App.jsx  index.css
app/neural_network/: dynamic_simple_nn.py  health.py  neural_network.py  neuron.py
app/static/: index.html
app/static/assets/: index-C2V4BuqV.js  index-D8st1rrd.js  index-DkmHTbli.css
app/utils/: health.py
misc/: neural_network.py
